# ft_transcendence

./: .env.example  .envrc  .gitignore  Makefile  README.md  docker-compose.yml  flake.nix  shell.nix
.github/: renovate.json
.github/workflows/: build-docker.yml  test.yml
components/monitoring/: docker-compose.yml  exporters.docker-compose.yml
components/monitoring/alertmanager/: Dockerfile  alertmanager.yml
components/monitoring/exporters/: docker-compose.yml
components/monitoring/grafana/: Dockerfile
components/monitoring/prometheus/: Dockerfile  prometheus.yml
components/monitoring/prometheus-nginx-exporter/: Dockerfile  go.mod
components/nginx/: Dockerfile  docker-compose.yml
components/nginx/config/: nginx.conf
components/services/: docker-compose.yml  postgres.docker-compose.yml  service.Dockerfile  services.docker-compose.yml
components/services/api/: .envrc  Dockerfile  pyproject.toml
components/services/api-service/: Dockerfile  manage.py  pyproject.toml
components/services/api-service/api/: settings.py
components/services/api-service/api/endpoints/: meta.py
components/services/auth-service/: Dockerfile  README.md  auth-service.py  (+3 more)
components/services/microservices/auth-service/: Dockerfile  auth-service.py  controller.py  dbeaver.sh  launch.sh  pyproject.toml
components/services/microservices/chat-service/: .envrc  Dockerfile  pyproject.toml
components/services/microservices/chat-service/chat/: consumers.py  routing.py
components/services/microservices/chat-service/chat_service/: asgi.py  settings.py
components/services/microservices/user-service/: .envrc  Dockerfile  launch.sh  pyproject.toml  service_runtime  test.py  user-service.py
components/services/service-runtime/: Dockerfile  README.md  launcher.py  pyproject.toml
components/services/service-runtime/service_runtime/: __init__.py  database.py  launcher.py  logger.py  models.py  queue.py  remote_service.py  service.py  service_runtime
components/vault/: docker-compose.yml
components/website/: .dockerignore  .envrc  Dockerfile  README.md  deploy-prod.sh  docker-compose.yml  manage.py  pyproject.toml  run.sh
components/website/frontend/: .dockerignore  Dockerfile  builder.sh  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
components/website/frontend/lib/tailwind/: buildCatppuccinThemes.js
components/website/frontend/src/: __chat.html  __navbar.html  chat.css  chat.js  htmx-spa-tools.js  index.html  lang.js  oauth42.js  shared.css  shared.js  theme.js
components/website/frontend/src/account/: home.js  index.html
components/website/frontend/src/chat/: __chat.html  chat.css  chat.js  index.html
components/website/frontend/src/games/pong/: 3dpong.js  colorUtils.js  index.html  pong.js  webgl-initbuffers.js  webgl-initshader.js
components/website/frontend/src/games/pong-crazy/: index.html  pong.js
components/website/frontend/src/games/pong-crazy/pong-game/: 3dpong.js  colorUtils.js  pongAi.js  pongMovement.js  pongNewMovement.js  webgl-shaders.js
components/website/frontend/src/games/pong-tournament/: index.html  pong-game  pong-tournament-init.js
components/website/frontend/src/games/pong/pong-game/: 3dpong.js  colorUtils.js  pong-classes.js  pongAi.js  pongMovement.js  pongNewMovement.js  webgl-initbuffers.js  webgl-initshader.js  webgl-shaders.js  webgl-shape.js
components/website/frontend/src/login/: index.html  login.js
components/website/frontend/src/register/: index.html  register.js
components/website/frontend/src/test/: index.html  test.js
components/website/lang/: en.json  fr.json
components/website/service/: lang.py  main.py  wsgi.py
components/website/service/lang/: en.json  es.json  fr.json  x-crmt.json  x-gpt.json
components/website/website-service/: decorators.py  lang.py  main.py
components/website/websiteservice/: lang.py  main.py  wsgi.py
components/website/websiteservice/lang/: en.json  es.json  fr.json  x-crmt.json  x-gpt.json
components/website/websiteservice/templatetags/: ft_trans_tags.py
scripts/: count_modules.py  create_env_files.sh  hash_bcrypt.py
services/backend/: README.md
(+83 files in other folders)
