[tool.poetry]
name = "service"
version = "0.3.0"
description = "The frontend, providing Server-Rendered (SSR'd) content to nginx"
authors = ["kiroussa <ft@xtrm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

