[tool.poetry]
name = "api"
version = "0.2.0"
description = ""
authors = ["kiroussa <ft@xtrm.me>", "lvincent", "gpouzet"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.0"
pika = "^1.3.2"
peewee = "^3.17.8"
gunicorn = "^23.0.0"
service-runtime = { path = "../service-runtime", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
