[tool.poetry]
name = "service-runtime"
version = "0.2.0"
description = "A custom runtime for microservices"
authors = ["xtrm <ft@xtrm.me>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
peewee = "^3.17.8"

[tool.poetry.scripts]
service-launch = "service_runtime.launcher:wrapped_start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
