[tool.poetry]
name = "chat-service"
version = "0.3.0"
description = ""
authors = ["gpouzet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
jwt = "^1.3.1"
peewee = "^3.17.8"
pyjwt = "^2.10.0"
django = "^5.1.4"
channels = "^4.2.0"
service-runtime = { path = "../../service-runtime", develop = true }
daphne = "^4.1.2"
channels-redis = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
