[tool.poetry]
name = "user-service"
version = "0.2.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
peewee = "^3.17.8"
service-runtime = { path = "../../service-runtime", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
